<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5_l_2340">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyMemoryRead"
        style="@style/BaseBtn.MemoryFnk"
        android:layout_width="0dp"
        android:text="@string/labelActionKeyMemoryRead"
        app:layout_constraintBottom_toTopOf="@id/actionKeyPercent"
        app:layout_constraintEnd_toStartOf="@id/actionKeyMemoryPlus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyMemoryPlus"
        style="@style/BaseBtn.MemoryFnk"
        android:layout_width="0dp"
        android:text="@string/labelActionKeyMemoryPlus"
        app:layout_constraintBottom_toTopOf="@id/actionKeyNegative"
        app:layout_constraintEnd_toStartOf="@id/actionKeyMemoryMinus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/actionKeyMemoryRead" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyMemoryMinus"
        style="@style/BaseBtn.MemoryFnk"
        android:layout_width="0dp"
        android:text="@string/labelActionKeyMemoryMinus"
        app:layout_constraintBottom_toTopOf="@id/actionKeyReset"
        app:layout_constraintEnd_toStartOf="@id/actionKeyMemoryClear"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/actionKeyMemoryPlus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyMemoryClear"
        style="@style/BaseBtn.MemoryFnk"
        android:layout_width="0dp"
        android:insetRight="@dimen/keyInsetRight"
        android:text="@string/labelActionKeyMemoryClear"
        app:layout_constraintBottom_toTopOf="@id/actionKeyBackspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/actionKeyMemoryMinus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyPercent"
        style="@style/BaseBtn.AdditionMathOper"
        android:layout_width="0dp"
        android:text="@string/keyPercent"
        app:layout_constraintBottom_toTopOf="@id/actionKeyReverse"
        app:layout_constraintEnd_toStartOf="@id/actionKeyNegative"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyNegative"
        style="@style/BaseBtn.AdditionMathOper"
        android:layout_width="0dp"
        android:text="@string/keyRevers"
        app:layout_constraintBottom_toTopOf="@id/actionKeySquaring"
        app:layout_constraintEnd_toStartOf="@id/numKeyPoint"
        app:layout_constraintStart_toEndOf="@id/actionKeyPercent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyReset"
        style="@style/BaseBtn.ResetAndBS"
        android:layout_width="0dp"
        android:text="@string/keyReset"
        app:layout_constraintBottom_toTopOf="@id/actionKeySquareRootExtraction"
        app:layout_constraintEnd_toStartOf="@id/actionKeyBackspace"
        app:layout_constraintStart_toEndOf="@id/actionKeyNegative"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyBackspace"
        style="@style/BaseBtn.ResetAndBS"
        android:layout_width="0dp"
        android:insetRight="@dimen/keyInsetRight"
        android:text="@string/keyBackSpace"
        app:layout_constraintBottom_toTopOf="@id/actionKeyDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/actionKeyReset"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyReverse"
        style="@style/BaseBtn.AdditionMathOper"
        android:layout_width="0dp"
        android:text="@string/keyInversOf"
        app:layout_constraintBottom_toTopOf="@id/numKey7"
        app:layout_constraintEnd_toStartOf="@id/actionKeySquaring"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeySquaring"
        style="@style/BaseBtn.AdditionMathOper"
        android:layout_width="0dp"
        android:text="@string/keyExtent"
        app:layout_constraintBottom_toTopOf="@id/numKey8"
        app:layout_constraintEnd_toStartOf="@id/actionKeySquareRootExtraction"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/actionKeyReverse" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeySquareRootExtraction"
        style="@style/BaseBtn.AdditionMathOper"
        android:layout_width="0dp"
        android:text="@string/keyRadical"
        app:layout_constraintBottom_toTopOf="@id/numKey9"
        app:layout_constraintEnd_toStartOf="@id/actionKeyDivision"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/actionKeySquaring" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyDivision"
        style="@style/BaseBtn.BasicMathOper"
        android:layout_width="0dp"
        android:insetRight="@dimen/keyInsetRight"
        android:text="@string/keyDivide"
        app:layout_constraintBottom_toTopOf="@id/actionKeyMultiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/actionKeySquareRootExtraction" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey7"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber7"
        app:layout_constraintBottom_toTopOf="@id/numKey4"
        app:layout_constraintEnd_toStartOf="@id/numKey8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey8"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber8"
        app:layout_constraintBottom_toTopOf="@id/numKey5"
        app:layout_constraintEnd_toStartOf="@id/numKey9"
        app:layout_constraintStart_toEndOf="@id/numKey7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey9"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber9"
        app:layout_constraintBottom_toTopOf="@id/numKey6"
        app:layout_constraintEnd_toStartOf="@id/actionKeyMultiplication"
        app:layout_constraintStart_toEndOf="@id/numKey8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyMultiplication"
        style="@style/BaseBtn.BasicMathOper"
        android:layout_width="0dp"
        android:insetRight="@dimen/keyInsetRight"
        android:text="@string/keyMultiply"
        app:layout_constraintBottom_toTopOf="@id/actionKeySubtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numKey9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey4"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber4"
        app:layout_constraintBottom_toTopOf="@id/numKey1"
        app:layout_constraintEnd_toStartOf="@id/numKey5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey5"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber5"
        app:layout_constraintBottom_toTopOf="@id/numKey2"
        app:layout_constraintEnd_toStartOf="@id/numKey6"
        app:layout_constraintStart_toEndOf="@id/numKey4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey6"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber6"
        app:layout_constraintBottom_toTopOf="@id/numKey3"
        app:layout_constraintEnd_toStartOf="@id/actionKeySubtraction"
        app:layout_constraintStart_toEndOf="@id/numKey5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeySubtraction"
        style="@style/BaseBtn.BasicMathOper"
        android:layout_width="0dp"
        android:insetRight="@dimen/keyInsetRight"
        android:text="@string/keySubtract"
        app:layout_constraintBottom_toTopOf="@id/actionKeyAddition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numKey6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey1"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber1"
        app:layout_constraintBottom_toTopOf="@id/numKey0"
        app:layout_constraintEnd_toStartOf="@id/numKey2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey2"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber2"
        app:layout_constraintBottom_toTopOf="@id/numKey0"
        app:layout_constraintEnd_toStartOf="@id/numKey3"
        app:layout_constraintStart_toEndOf="@id/numKey1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey3"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber3"
        app:layout_constraintBottom_toTopOf="@id/numKeyPoint"
        app:layout_constraintEnd_toStartOf="@id/actionKeyAddition"
        app:layout_constraintStart_toEndOf="@id/numKey2"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyAddition"
        style="@style/BaseBtn.BasicMathOper"
        android:layout_width="0dp"
        android:insetRight="@dimen/keyInsetRight"
        android:text="@string/keyAdd"
        app:layout_constraintBottom_toTopOf="@id/actionKeyResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numKey3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKey0"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyNumber0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/numKey3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numKeyPoint"
        style="@style/BaseBtn.Num"
        android:layout_width="0dp"
        android:text="@string/keyPoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/actionKeyResult"
        app:layout_constraintStart_toEndOf="@id/numKey0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionKeyResult"
        style="@style/BaseBtn.ResultMathOper"
        android:layout_width="0dp"
        android:insetRight="@dimen/keyInsetRight"
        android:text="@string/keyGetResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numKeyPoint" />

    <TextView
        android:id="@+id/topCalcDisplay"
        style="@style/BaseMonitor"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="@dimen/topCalcDisplayTextSize"
        app:layout_constraintBottom_toTopOf="@+id/mainDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainDisplay"
        style="@style/BaseMonitor"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/keyNumber0"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/mainDisplayTextSize"
        app:layout_constraintBottom_toTopOf="@+id/actionKeyMemoryPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>