<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/numKey1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber1"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toTopOf="@+id/numKey4"
        app:layout_constraintEnd_toStartOf="@+id/numKey2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/numKey2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber2"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toTopOf="@+id/numKey5"
        app:layout_constraintEnd_toStartOf="@+id/numKey3"
        app:layout_constraintStart_toEndOf="@+id/numKey1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/numKey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber3"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toTopOf="@id/numKey6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numKey2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/numKey4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber4"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toTopOf="@id/numKey7"
        app:layout_constraintEnd_toStartOf="@+id/numKey5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numKey1" />

    <Button
        android:id="@+id/numKey5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber5"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toTopOf="@id/numKey8"
        app:layout_constraintEnd_toStartOf="@id/numKey6"
        app:layout_constraintStart_toEndOf="@id/numKey4"
        app:layout_constraintTop_toBottomOf="@id/numKey2" />

    <Button
        android:id="@+id/numKey6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber6"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toTopOf="@id/numKey9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numKey5"
        app:layout_constraintTop_toBottomOf="@id/numKey3" />

    <Button
        android:id="@+id/numKey7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber7"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numKey8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numKey4" />

    <Button
        android:id="@+id/numKey8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber8"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numKey9"
        app:layout_constraintStart_toEndOf="@id/numKey7"
        app:layout_constraintTop_toBottomOf="@+id/numKey5" />

    <Button
        android:id="@+id/numKey9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber9"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numKey8"
        app:layout_constraintTop_toBottomOf="@id/numKey6" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keyNumber0"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintStart_toStartOf="@+id/numKey7"
        app:layout_constraintTop_toBottomOf="@+id/numKey8" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyPoint"
        android:textSize="@dimen/keyTextSize"
        app:layout_constraintEnd_toEndOf="@id/numKey9"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/numKey9" />

</androidx.constraintlayout.widget.ConstraintLayout>